<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">CONNECT</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="set">SET</string>
    <string name="reset">RESET</string>
    <string name="poll">POLL</string>
</resources>